added memory to the chatbot

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
     <input type="checkbox" id="voiceToggle"  />
     🔊 Voice OFF
   </label>
+  <label style="margin: 10px 0; display: flex; align-items: center; gap: 6px;">
+  <input type="checkbox" id="historyToggle" checked />
+  🧠 Keep Chat Memory
+</label>
+
 
   <div id="chatMessages" class="chat-window">
     <div class="message bot">Hello Coder Army 🧑‍💻</div>
